--- a/src/buildings.css
+++ b/src/buildings.css
@@ -10,14 +10,15 @@
       background-color: #A6A9AE;
       background-size: contain;
       background-repeat: no-repeat;
-      image-rendering: pixelated;
+      image-rendering: optimizeSpeed;
       background-size:auto;
       transform: scale(1.1);
-      transition: all 0.25s, background-color 0s;
+      transition: all 0.25s, background-color 0s, transform 0.5s;
       transition-timing-function:cubic-bezier(0.8,0,0,1);
       z-index: 100000;
       filter: saturate(1.1);
-    
+      opacity:0%;
+      transform:scale(0.5);
     }
 
     .office-building:hover,
@@ -91,7 +92,6 @@
       background-image: url('sprites/house_1.png');
       background-size: 50%;
       background-repeat: round;
-      opacity: 75%;
       filter:grayscale(100%)
     }
 
@@ -111,6 +111,27 @@
       }
       100% {
         outline: 1.5px solid #000;
+        z-index:100000000;
+        background-size:100% 100%;
+        transition: steps(3, end);
+      }
+    }
+
+    @keyframes pulse-rent {
+      0% {
+        outline: 1.5px dashed #000;
+        z-index:100000000;
+        background-size:100% 100%;
+        transition: steps(3, end);
+      }
+      50% {
+        outline: 3px dashed #000;
+        z-index:100000000;
+        background-size:100% 100%;
+        transition: steps(3, end);
+      }
+      100% {
+        outline: 1.5px dashed #000;
         z-index:100000000;
         background-size:100% 100%;
         transition: steps(3, end);
