--- a/src/css/custom/battleStyles.css
+++ b/src/css/custom/battleStyles.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100%;
     background-color: #a1a1a1;
-    z-index: 1000000000000;
+    z-index: 5;
     box-sizing: border-box;
     top:150%;
     }
