--- a/src/css/custom/battleStyles.css
+++ b/src/css/custom/battleStyles.css
@@ -1,113 +1,63 @@
-    #battleFrame {
-      position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: #a1a1a1;
-    z-index: 5;
-    box-sizing: border-box;
-    top:150%;
-    }
+#battleFrame {
+  top:150%;
+  background-color: #00800050;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  padding:15px;
+}
 
-    #battleFrame .left {
-      float:left;
-      outline:20px solid #1a1a1a;
-      background-color:#1a1a1a;
-    }
+#battleTextDiv {
+  position: fixed;
+  bottom: 15px;
+  width: 95%;
+  background-color: #1a1a1a;
+  box-sizing: border-box;
+  height: 20%;
+}
 
-    #battleFrame .right{
-      float:right;
-      outline:20px solid #1a1a1a;
-      background-color:#1a1a1a;
-    }
+#battleText {
+  display: inline-block;
+  font-size: 12.5px;
+  border: 2.5px double green;
+  font-family: 'pst';
+  padding: 10px;
+  margin: 10px;
+  width: 75%;
+  height: -webkit-fill-available;
+}
 
-    #playerBattleUI, #enemyBattleUI {
-      background-color: black;
-      color: #a1a1a1;
-      padding: 14px;
-      font-size: 25px;
-      position: absolute;
-      width: 100%;
-      bottom: 0px;
-      left: 0px;
-      padding-top: 0px;
-      box-sizing: border-box;
-    }
+#playerOptionsMenu {
+  float: right;
+  height: 100%;
+  display: inline-grid;
+  position: absolute;
+  top: 0;
+  padding: 7.5px;
+  box-sizing: border-box;
+  width: -webkit-fill-available;
+  padding-left: 0px;
+  padding-right: 0px;
+}
 
-    #enemyBattleUI {
-      top:0;
-      bottom:unset!important;
-    }
+#playerOptionsMenu button {
+  background-color: green;
+  border: none;
+  font-family: 'gamer';
+  font-size: 25px;
+  margin: 5px;
+  padding: 10px;
+  padding-top: 0px;
+  padding-bottom: 5px;
+  box-sizing: border-box;
+  width: 100%;
+  filter: drop-shadow(-5px 5px 0px #000000);
+}
 
-    #playerHP, #enemyHP {
-      margin: 5px;
-    padding: 0px;
-    line-height: normal;
-    margin-left: 0px;
-    margin-right: 0px;
-    }
-
-    #playerHealthBar-outer, #enemyHealthBar-outer {
-      height: 15px;
-    background-color: #1a1a1a;
-    padding: 0px;
-    margin: 0px;
-    }
-
-    #playerHealthBar-inner, #enemyHealthBar-inner {
-      background-color:#a1a1a1;
-      height: 100%;
-    }
-
-    #enemyBattleUI .right {
-      text-align:right;
-    }
-
-    #playerBattleOptions, #enemyBattleOptions {
-      width: 30%;
-    float: right;
-    position: absolute;
-    bottom: 0px;
-    right: 0px;
-    margin: 15px;
-    background-color: green;
-    padding: 15px;
-    margin-right: 30px;
-    padding-top:5px;
-    padding-bottom:5px;
-    }
-
-    #playerBattleOptions button, #enemyBattleOptions button {
-      width: 100%;
-    border: 0px;
-    padding: 10px;
-    font-family: 'pst';
-    font-size: 9px;
-    background-color: #1a1a1a;
-    color: #a1a1a1;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    }
-
-    #playerBattleOptions button:hover {
-      transform:scale(1.05);
-    }
-
-    #playerBattleOptions button i, #enemyBattleOptions button i {
-      float: left;
-    font-size: 8px;
-    transform: scale(1.5);
-    }
-
-    #playerBattleOptions hr {
-      margin: 0px;
-    border-color: #a1a1a1;
-    border-width: 2.5px;
-    }
-
-    #playerBattleOptions span {
-      font-size: 16px;
-    margin: 0px;
-    padding: 0px;
-    display: block;
-    }
+#playerOptionsMenu button i {
+  font-weight: 900;
+  font-size: 13px;
+}
