--- a/src/css/custom/battleStyles.css
+++ b/src/css/custom/battleStyles.css
@@ -1,123 +1,11 @@
 #battleFrame {
-  transform:scale(1.5);
-  top:0%;
-  background-color: #00800050;
   position: fixed;
-  left: 0%;
+  background-color: #a1a1a150;
   width: 100%;
   height: 100%;
-  z-index: 10;
+  z-index: 1000000000;
   opacity:0%;
-  padding:15px;
   pointer-events:none;
-  transition: all 1.5s;
-  box-sizing: border-box;
-  transition-timing-function:cubic-bezier(0.8,0,0,1);
-  filter:blur(5px);
-}
-
-#battleTextDiv {
-  position: fixed;
-  bottom: 15px;
-  width: 95%;
-  background-color: #1a1a1a;
-  box-sizing: border-box;
-  height: 20%;
-  opacity:0%;
-  pointer-events: none;
-}
-
-#battleText {
-  display: inline-block;
-  font-size: 12.5px;
-  border: 2.5px double green;
-  font-family: 'pst';
-  padding: 10px;
-  margin: 10px;
-  width: 70%;
-  height: -webkit-fill-available;
-}
-
-#playerOptionsMenu {
-  float: right;
-  height: 100%;
-  display: inline-grid;
-  position: absolute;
-  top: 0;
-  padding: 7.5px;
-  box-sizing: border-box;
-  width: -webkit-fill-available;
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
-#playerOptionsMenu button {
-  background-color: green;
-  border: none;
-  font-family: 'gamer';
-  font-size: 25px;
-  margin: 5px;
-  padding: 10px;
-  padding-top: 0px;
-  padding-bottom: 5px;
-  box-sizing: border-box;
-  width: 100%;
-  filter: drop-shadow(-5px 5px 0px #000000);
-}
-
-#playerOptionsMenu button:hover {
-  background-color: #a1a1a1;
-  
-}
-
-#playerOptionsMenu button i {
-  font-weight: 900;
-  font-size: 15px;
-}
-
-#enemy_battle_sprite {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%) scale(0.25);
-  width: 50vh;
-  image-rendering: optimizeSpeed;
-  transition: transform 1.5s ease-in-out, opacity 1.5s steps(5, end), filter 1.5s;
-  transition-timing-function:cubic-bezier(0.8,0,0,1);
-  filter: blur(2.5px) drop-shadow(5px 5px 0px #1a1a1a);
-  opacity: 0%;
-  height: auto;
-  object-fit: cover;
-  aspect-ratio: 1/1;
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
-  animation-fill-mode: forwards;
-}
-
-@keyframes scaleAnimation {
-  0% {
-    transition: background 0s!important;
-    opacity:0%;
-    transform: translate(-50%,-50%) scale(0.75);
-    background-image:url('../../sprites/officer_approaches.png');
-  }
-  50% {
-    transition: background 0s!important;
-    opacity:50%;
-    transform: translate(-50%,-50%) scale(1.0);
-    background-image:url('../../sprites/officer_approaches_l.png');
-  }
-  100% {
-    transition: background 0s!important;
-    opacity:100%;
-    transform: translate(-50%,-50%) scale(1.25);
-    background-image:url('../../sprites/officer_approaches.png');
-  }
-}
-
-
-
-#player_battle_sprite {
-
+  transition: all 0.5s;
+  transition-timing-function: ease-in-out;
 }
