--- a/src/css/custom/buildings.css
+++ b/src/css/custom/buildings.css
@@ -226,4 +226,11 @@
         box-shadow: 0 0 0 20px rgba(255, 0, 0, 0);
       }
     }
-    
+
+    .streetlamp {
+      position: absolute;
+      width: 2px;
+      height: 8px;
+      z-index: 100000000;
+      background-color: transparent;
+    }
