--- a/src/css/custom/buildings.css
+++ b/src/css/custom/buildings.css
@@ -227,12 +227,24 @@
       }
     }
 
-    .streetlamp {
+    .streetlamp, .stoplight {
       position: absolute;
-      width: 2px;
-      height: 8px;
-      z-index: 100000000;
+      width: 1px;
+      height: 4px;
+      z-index: 100000000000;
       background-color: transparent;
+      filter: drop-shadow(0px -5px 1px white);
+      opacity: 100%;
+      margin: 1px;
+    }
+
+    .stoplight {
+      width: 4px;
+      height: 5px;
+      margin: 0px;
+      margin-top: -50%;
+      image-rendering: optimizespeed;
+      filter: drop-shadow(0px 0px 6px white);
     }
 
     .boat {
