--- a/src/css/lib/remixicon.scss
+++ b/src/css/lib/remixicon.scss
@@ -1,20 +1,20 @@
 /*
-* Remix Icon v4.1.0
+* Remix Icon v4.2.0
 * https://remixicon.com
 * https://github.com/Remix-Design/RemixIcon
 *
 * Copyright RemixIcon.com
 * Released under the Apache License Version 2.0
 *
-* Date: 2024-01-14
+* Date: 2024-02-25
 */
 @font-face {font-family: "remixicon";
-  src: url('remixicon.eot?t=1705244689813'); /* IE9*/
-  src: url('remixicon.eot?t=1705244689813#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url("remixicon.woff2?t=1705244689813") format("woff2"),
-  url("remixicon.woff?t=1705244689813") format("woff"),
-  url('remixicon.ttf?t=1705244689813') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('remixicon.svg?t=1705244689813#remixicon') format('svg'); /* iOS 4.1- */
+  src: url('remixicon.eot?t=1708865856766'); /* IE9*/
+  src: url('remixicon.eot?t=1708865856766#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url("remixicon.woff2?t=1708865856766") format("woff2"),
+  url("remixicon.woff?t=1708865856766") format("woff"),
+  url('remixicon.ttf?t=1708865856766') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('remixicon.svg?t=1708865856766#remixicon') format('svg'); /* iOS 4.1- */
 }
 
 [class^="ri-"], [class*=" ri-"] {
@@ -2761,6 +2761,120 @@
 .ri-rewind-start-mini-line:before { content: "\f4ae"; }
 .ri-scroll-to-bottom-fill:before { content: "\f4af"; }
 .ri-scroll-to-bottom-line:before { content: "\f4b0"; }
+.ri-add-large-fill:before { content: "\f4b1"; }
+.ri-add-large-line:before { content: "\f4b2"; }
+.ri-aed-electrodes-fill:before { content: "\f4b3"; }
+.ri-aed-electrodes-line:before { content: "\f4b4"; }
+.ri-aed-fill:before { content: "\f4b5"; }
+.ri-aed-line:before { content: "\f4b6"; }
+.ri-alibaba-cloud-fill:before { content: "\f4b7"; }
+.ri-alibaba-cloud-line:before { content: "\f4b8"; }
+.ri-align-item-bottom-fill:before { content: "\f4b9"; }
+.ri-align-item-bottom-line:before { content: "\f4ba"; }
+.ri-align-item-horizontal-center-fill:before { content: "\f4bb"; }
+.ri-align-item-horizontal-center-line:before { content: "\f4bc"; }
+.ri-align-item-left-fill:before { content: "\f4bd"; }
+.ri-align-item-left-line:before { content: "\f4be"; }
+.ri-align-item-right-fill:before { content: "\f4bf"; }
+.ri-align-item-right-line:before { content: "\f4c0"; }
+.ri-align-item-top-fill:before { content: "\f4c1"; }
+.ri-align-item-top-line:before { content: "\f4c2"; }
+.ri-align-item-vertical-center-fill:before { content: "\f4c3"; }
+.ri-align-item-vertical-center-line:before { content: "\f4c4"; }
+.ri-apps-2-add-fill:before { content: "\f4c5"; }
+.ri-apps-2-add-line:before { content: "\f4c6"; }
+.ri-close-large-fill:before { content: "\f4c7"; }
+.ri-close-large-line:before { content: "\f4c8"; }
+.ri-collapse-diagonal-2-fill:before { content: "\f4c9"; }
+.ri-collapse-diagonal-2-line:before { content: "\f4ca"; }
+.ri-collapse-diagonal-fill:before { content: "\f4cb"; }
+.ri-collapse-diagonal-line:before { content: "\f4cc"; }
+.ri-dashboard-horizontal-fill:before { content: "\f4cd"; }
+.ri-dashboard-horizontal-line:before { content: "\f4ce"; }
+.ri-expand-diagonal-2-fill:before { content: "\f4cf"; }
+.ri-expand-diagonal-2-line:before { content: "\f4d0"; }
+.ri-expand-diagonal-fill:before { content: "\f4d1"; }
+.ri-expand-diagonal-line:before { content: "\f4d2"; }
+.ri-firebase-fill:before { content: "\f4d3"; }
+.ri-firebase-line:before { content: "\f4d4"; }
+.ri-flip-horizontal-2-fill:before { content: "\f4d5"; }
+.ri-flip-horizontal-2-line:before { content: "\f4d6"; }
+.ri-flip-horizontal-fill:before { content: "\f4d7"; }
+.ri-flip-horizontal-line:before { content: "\f4d8"; }
+.ri-flip-vertical-2-fill:before { content: "\f4d9"; }
+.ri-flip-vertical-2-line:before { content: "\f4da"; }
+.ri-flip-vertical-fill:before { content: "\f4db"; }
+.ri-flip-vertical-line:before { content: "\f4dc"; }
+.ri-formula:before { content: "\f4dd"; }
+.ri-function-add-fill:before { content: "\f4de"; }
+.ri-function-add-line:before { content: "\f4df"; }
+.ri-goblet-2-fill:before { content: "\f4e0"; }
+.ri-goblet-2-line:before { content: "\f4e1"; }
+.ri-golf-ball-fill:before { content: "\f4e2"; }
+.ri-golf-ball-line:before { content: "\f4e3"; }
+.ri-group-3-fill:before { content: "\f4e4"; }
+.ri-group-3-line:before { content: "\f4e5"; }
+.ri-heart-add-2-fill:before { content: "\f4e6"; }
+.ri-heart-add-2-line:before { content: "\f4e7"; }
+.ri-id-card-fill:before { content: "\f4e8"; }
+.ri-id-card-line:before { content: "\f4e9"; }
+.ri-information-off-fill:before { content: "\f4ea"; }
+.ri-information-off-line:before { content: "\f4eb"; }
+.ri-java-fill:before { content: "\f4ec"; }
+.ri-java-line:before { content: "\f4ed"; }
+.ri-layout-grid-2-fill:before { content: "\f4ee"; }
+.ri-layout-grid-2-line:before { content: "\f4ef"; }
+.ri-layout-horizontal-fill:before { content: "\f4f0"; }
+.ri-layout-horizontal-line:before { content: "\f4f1"; }
+.ri-layout-vertical-fill:before { content: "\f4f2"; }
+.ri-layout-vertical-line:before { content: "\f4f3"; }
+.ri-menu-fold-2-fill:before { content: "\f4f4"; }
+.ri-menu-fold-2-line:before { content: "\f4f5"; }
+.ri-menu-fold-3-fill:before { content: "\f4f6"; }
+.ri-menu-fold-3-line:before { content: "\f4f7"; }
+.ri-menu-fold-4-fill:before { content: "\f4f8"; }
+.ri-menu-fold-4-line:before { content: "\f4f9"; }
+.ri-menu-unfold-2-fill:before { content: "\f4fa"; }
+.ri-menu-unfold-2-line:before { content: "\f4fb"; }
+.ri-menu-unfold-3-fill:before { content: "\f4fc"; }
+.ri-menu-unfold-3-line:before { content: "\f4fd"; }
+.ri-menu-unfold-4-fill:before { content: "\f4fe"; }
+.ri-menu-unfold-4-line:before { content: "\f4ff"; }
+.ri-mobile-download-fill:before { content: "\f500"; }
+.ri-mobile-download-line:before { content: "\f501"; }
+.ri-nextjs-fill:before { content: "\f502"; }
+.ri-nextjs-line:before { content: "\f503"; }
+.ri-nodejs-fill:before { content: "\f504"; }
+.ri-nodejs-line:before { content: "\f505"; }
+.ri-pause-large-fill:before { content: "\f506"; }
+.ri-pause-large-line:before { content: "\f507"; }
+.ri-play-large-fill:before { content: "\f508"; }
+.ri-play-large-line:before { content: "\f509"; }
+.ri-play-reverse-large-fill:before { content: "\f50a"; }
+.ri-play-reverse-large-line:before { content: "\f50b"; }
+.ri-police-badge-fill:before { content: "\f50c"; }
+.ri-police-badge-line:before { content: "\f50d"; }
+.ri-prohibited-2-fill:before { content: "\f50e"; }
+.ri-prohibited-2-line:before { content: "\f50f"; }
+.ri-shopping-bag-4-fill:before { content: "\f510"; }
+.ri-shopping-bag-4-line:before { content: "\f511"; }
+.ri-snowflake-fill:before { content: "\f512"; }
+.ri-snowflake-line:before { content: "\f513"; }
+.ri-square-root:before { content: "\f514"; }
+.ri-stop-large-fill:before { content: "\f515"; }
+.ri-stop-large-line:before { content: "\f516"; }
+.ri-tailwind-css-fill:before { content: "\f517"; }
+.ri-tailwind-css-line:before { content: "\f518"; }
+.ri-tooth-fill:before { content: "\f519"; }
+.ri-tooth-line:before { content: "\f51a"; }
+.ri-video-off-fill:before { content: "\f51b"; }
+.ri-video-off-line:before { content: "\f51c"; }
+.ri-video-on-fill:before { content: "\f51d"; }
+.ri-video-on-line:before { content: "\f51e"; }
+.ri-webhook-fill:before { content: "\f51f"; }
+.ri-webhook-line:before { content: "\f520"; }
+.ri-weight-fill:before { content: "\f521"; }
+.ri-weight-line:before { content: "\f522"; }
 
 $ri-24-hours-fill: "\ea01";
 $ri-24-hours-line: "\ea02";
@@ -5498,4 +5612,118 @@ $ri-rewind-start-mini-fill: "\f4ad";
 $ri-rewind-start-mini-line: "\f4ae";
 $ri-scroll-to-bottom-fill: "\f4af";
 $ri-scroll-to-bottom-line: "\f4b0";
+$ri-add-large-fill: "\f4b1";
+$ri-add-large-line: "\f4b2";
+$ri-aed-electrodes-fill: "\f4b3";
+$ri-aed-electrodes-line: "\f4b4";
+$ri-aed-fill: "\f4b5";
+$ri-aed-line: "\f4b6";
+$ri-alibaba-cloud-fill: "\f4b7";
+$ri-alibaba-cloud-line: "\f4b8";
+$ri-align-item-bottom-fill: "\f4b9";
+$ri-align-item-bottom-line: "\f4ba";
+$ri-align-item-horizontal-center-fill: "\f4bb";
+$ri-align-item-horizontal-center-line: "\f4bc";
+$ri-align-item-left-fill: "\f4bd";
+$ri-align-item-left-line: "\f4be";
+$ri-align-item-right-fill: "\f4bf";
+$ri-align-item-right-line: "\f4c0";
+$ri-align-item-top-fill: "\f4c1";
+$ri-align-item-top-line: "\f4c2";
+$ri-align-item-vertical-center-fill: "\f4c3";
+$ri-align-item-vertical-center-line: "\f4c4";
+$ri-apps-2-add-fill: "\f4c5";
+$ri-apps-2-add-line: "\f4c6";
+$ri-close-large-fill: "\f4c7";
+$ri-close-large-line: "\f4c8";
+$ri-collapse-diagonal-2-fill: "\f4c9";
+$ri-collapse-diagonal-2-line: "\f4ca";
+$ri-collapse-diagonal-fill: "\f4cb";
+$ri-collapse-diagonal-line: "\f4cc";
+$ri-dashboard-horizontal-fill: "\f4cd";
+$ri-dashboard-horizontal-line: "\f4ce";
+$ri-expand-diagonal-2-fill: "\f4cf";
+$ri-expand-diagonal-2-line: "\f4d0";
+$ri-expand-diagonal-fill: "\f4d1";
+$ri-expand-diagonal-line: "\f4d2";
+$ri-firebase-fill: "\f4d3";
+$ri-firebase-line: "\f4d4";
+$ri-flip-horizontal-2-fill: "\f4d5";
+$ri-flip-horizontal-2-line: "\f4d6";
+$ri-flip-horizontal-fill: "\f4d7";
+$ri-flip-horizontal-line: "\f4d8";
+$ri-flip-vertical-2-fill: "\f4d9";
+$ri-flip-vertical-2-line: "\f4da";
+$ri-flip-vertical-fill: "\f4db";
+$ri-flip-vertical-line: "\f4dc";
+$ri-formula: "\f4dd";
+$ri-function-add-fill: "\f4de";
+$ri-function-add-line: "\f4df";
+$ri-goblet-2-fill: "\f4e0";
+$ri-goblet-2-line: "\f4e1";
+$ri-golf-ball-fill: "\f4e2";
+$ri-golf-ball-line: "\f4e3";
+$ri-group-3-fill: "\f4e4";
+$ri-group-3-line: "\f4e5";
+$ri-heart-add-2-fill: "\f4e6";
+$ri-heart-add-2-line: "\f4e7";
+$ri-id-card-fill: "\f4e8";
+$ri-id-card-line: "\f4e9";
+$ri-information-off-fill: "\f4ea";
+$ri-information-off-line: "\f4eb";
+$ri-java-fill: "\f4ec";
+$ri-java-line: "\f4ed";
+$ri-layout-grid-2-fill: "\f4ee";
+$ri-layout-grid-2-line: "\f4ef";
+$ri-layout-horizontal-fill: "\f4f0";
+$ri-layout-horizontal-line: "\f4f1";
+$ri-layout-vertical-fill: "\f4f2";
+$ri-layout-vertical-line: "\f4f3";
+$ri-menu-fold-2-fill: "\f4f4";
+$ri-menu-fold-2-line: "\f4f5";
+$ri-menu-fold-3-fill: "\f4f6";
+$ri-menu-fold-3-line: "\f4f7";
+$ri-menu-fold-4-fill: "\f4f8";
+$ri-menu-fold-4-line: "\f4f9";
+$ri-menu-unfold-2-fill: "\f4fa";
+$ri-menu-unfold-2-line: "\f4fb";
+$ri-menu-unfold-3-fill: "\f4fc";
+$ri-menu-unfold-3-line: "\f4fd";
+$ri-menu-unfold-4-fill: "\f4fe";
+$ri-menu-unfold-4-line: "\f4ff";
+$ri-mobile-download-fill: "\f500";
+$ri-mobile-download-line: "\f501";
+$ri-nextjs-fill: "\f502";
+$ri-nextjs-line: "\f503";
+$ri-nodejs-fill: "\f504";
+$ri-nodejs-line: "\f505";
+$ri-pause-large-fill: "\f506";
+$ri-pause-large-line: "\f507";
+$ri-play-large-fill: "\f508";
+$ri-play-large-line: "\f509";
+$ri-play-reverse-large-fill: "\f50a";
+$ri-play-reverse-large-line: "\f50b";
+$ri-police-badge-fill: "\f50c";
+$ri-police-badge-line: "\f50d";
+$ri-prohibited-2-fill: "\f50e";
+$ri-prohibited-2-line: "\f50f";
+$ri-shopping-bag-4-fill: "\f510";
+$ri-shopping-bag-4-line: "\f511";
+$ri-snowflake-fill: "\f512";
+$ri-snowflake-line: "\f513";
+$ri-square-root: "\f514";
+$ri-stop-large-fill: "\f515";
+$ri-stop-large-line: "\f516";
+$ri-tailwind-css-fill: "\f517";
+$ri-tailwind-css-line: "\f518";
+$ri-tooth-fill: "\f519";
+$ri-tooth-line: "\f51a";
+$ri-video-off-fill: "\f51b";
+$ri-video-off-line: "\f51c";
+$ri-video-on-fill: "\f51d";
+$ri-video-on-line: "\f51e";
+$ri-webhook-fill: "\f51f";
+$ri-webhook-line: "\f520";
+$ri-weight-fill: "\f521";
+$ri-weight-line: "\f522";
 
