--- a/src/css/custom/battleStyles.css
+++ b/src/css/custom/battleStyles.css
@@ -3,9 +3,10 @@
   background-color: #a1a1a150;
   width: 100%;
   height: 100%;
-  z-index: 1000000000;
-  opacity:0%;
-  pointer-events:none;
+  z-index: 9;
+  opacity: 100%;
+  pointer-events: none;
   transition: all 0.5s;
   transition-timing-function: ease-in-out;
+  display:none;
 }
