--- a/src/css/custom/uikitMods.css
+++ b/src/css/custom/uikitMods.css
@@ -51,7 +51,7 @@
     }
 
     .uk-dropdown-nav {
-      position: sticky;
+      position: relative;
       top: 0;
       outline: 5px solid black;
       background-color: black !important;
